# psyexp_net

./: .gitignore  README.md  main.py  pyproject.toml
examples/: demo_inmemory.py
psyexp_net/: __init__.py  config.py  enums.py  errors.py
psyexp_net/cli/: main.py
psyexp_net/discovery/: __init__.py  manual.py  zeroconf_service.py
psyexp_net/health/: __init__.py  benchmark.py  doctor.py  monitors.py
psyexp_net/logging/: __init__.py  metrics.py  recorder.py  replay.py
psyexp_net/protocol/: __init__.py  ack.py  codec.py  message.py  registry.py  versioning.py
psyexp_net/runtime/: __init__.py  barrier.py  client.py  registry.py  scheduler.py  server.py  session.py
psyexp_net/security/: __init__.py  auth.py  identity.py
psyexp_net/timing/: __init__.py  jitter.py  latency.py  sync.py
psyexp_net/transport/: __init__.py  base.py  lsl_bridge.py  memory.py  zmq_lan.py
tests/: test_optional_backends.py  test_protocol.py  test_runtime_integration.py  test_timing.py
